...
                        <Stack.Screen name="Payments" component={PaymentsScreen} />
                        <Stack.Screen name="RentReceiptConfig" component={RentReceiptConfigScreen} />
                        <Stack.Screen name="PaymentAccountEditor" component={PaymentAccountEditorScreen} />
                        <Stack.Screen name="TermsEditor" component={TermsEditorScreen} />
                        <Stack.Screen name="Account" component={AccountScreen} />
                        <Stack.Screen name="Profile" component={ProfileScreen} />
                        <Stack.Screen name="Privacy" component={PrivacyScreen} />
                        <Stack.Screen name="Backup" component={BackupScreen} />
                        <Stack.Screen name="About" component={AboutScreen} />
                        <Stack.Screen name="Notifications" component={NotificationsScreen} />
                        <Stack.Screen name="NotificationsCenter" component={NotificationsCenterScreen} />
                        <Stack.Screen name="TakeRent" component={TakeRentScreen} />
                        <Stack.Screen name="PropertySettings" component={PropertySettingsScreen} />
...
